klass-model-converters/klass-compiler/src/test/resources/cool/klass/model/converter/compiler/error/association/InvalidMultiplicityErrorTest.klass
package dummy

association DummyAssociation
{
    source: DummyClass[2..3];
    target: DummyClass[4..5];
    
    relationship this.id == DummyClass.id
}

class DummyClass
{
    id: Long key;
}
